# IAmultiagentica

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLEANUP_REVIEW.md  COMANDOS.html  COMANDOS.md  CONTRIBUTING.md  HARNESS_COMPARISON.md  LICENSE  PAIN_POINTS.md  PAPER_DIRECTION.html  README.md  excel.xlsx  instalar.bat  instalar.ps1  instalar.sh  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
audit/redteam/: run_redteam.py  run_security_regression.py
audit/redteam_sandbox/: .env.test  credentials.json  id_rsa  large.txt  normal.txt  normal_tokenized_name.txt  secret_report.md  token.json  tokenizer.py
audit/redteam_sandbox/docs/: tokenization.md
audit/redteam_sandbox/dos_many/: f013.txt  f014.txt  f015.txt  f016.txt  f017.txt  f018.txt  f019.txt  f020.txt  f023.txt  f024.txt  f025.txt  f026.txt  f027.txt  f028.txt  f029.txt  f030.txt  (+48 more)
audit/repo_cleanup/: repo_cleanup_report.md
audit/reports/: floren_redteam_report.md  redteam_results.json
benchmarks/: ENVIRONMENT.md  README.md  prices.json
benchmarks/harbor/: PILOT.md  README.md  ci2lab_harbor.py  opencode_local.json  opencode_local.py  pyproject.toml  tasks_30.txt  tasks_tblite_30.txt
benchmarks/results/: benchmark_report.xlsx
benchmarks/tasks/: bug_01_failing_test.json  bug_02_multifile_regression.json  cli_01_log_search.json  cli_02_script_diagnose.json  feat_01_implement_spec.json  qa_01_locate_symbol.json  qa_02_trace_value.json
ci2lab/: __init__.py  __main__.py  cli.py  cli_permissions.py  config.py  console.py  pipeline.py  settings.py
ci2lab/bench/: __init__.py  excel.py  gitutil.py  harbor.py  harbor_report.py  metrics.py  opencode_trace.py  report.py  run.py  runner.py  task.py  task_sample.py  verifier.py
ci2lab/catalog/: experimental_gguf_adapters.json  model_templates.json  models.json
ci2lab/cli/: __init__.py  __main__.py  main.py  menu.py  parser.py  runtime.py
ci2lab/contracts/: README.md  __init__.py  types.py
ci2lab/evals/: __init__.py  harness_write_eval.py  run.py  runner.py  task.py
ci2lab/hardware/: __init__.py  profile.py
ci2lab/harness/: __init__.py  compact.py  context.py  document_answer.py  edit_followup.py  frontmatter.py  hooks.py  llm_client.py  llm_errors.py  loop.py  messages.py  parsing.py  permissions.py  policy.py  project_memory.py  prompts.py  repl.py  run_logger.py  security_profiles.py  session.py  terminal_input.py  token_usage.py  tool_metrics.py  types.py  vision.py  vision_exercise.py  write_permissions.py
ci2lab/router/: __init__.py  catalog.py  imported_models.py  intent.py  recommend.py  resolve.py  selection.py
ci2lab/runtime/: __init__.py  base.py  llama_cpp.py  ollama.py  preflight.py
ci2lab/scripts/: __init__.py  audit_live_models.py
ci2lab/security/: __init__.py  approval_prompt.py  audit.py  claude_deterministic_matrix.py  claude_live_audit.py  comparison.py  decisions.py  engine.py  gate_check.py  opencode_config_comparison.py  opencode_config_io.py  opencode_defaults.py  opencode_permissions.py  opencode_presets.py  paths.py  permissions.py  permissions_dashboard.py  policy.py  session_permissions.py
ci2lab/ui/: __init__.py  projects.py  researchers.py  server.py
docs/: 20260217_rudiger_user_instructions.md  BENCHMARKING.html  BENCHMARKING.md  BENCHMARK_DESIGN.md  CI2LAB_GUARD_VALIDATION.md  CLAUDE_EXPERIMENTAL_VALIDATION.md  HARDWARE_ROUTER_HANDOFF.md  KNOWN_LIMITATIONS.html  KNOWN_LIMITATIONS.md  NEXT_AGENT_ROADMAP.md  PEER_REVIEW.md  SECURITY_POLICY.md  STRUCTURE.md  TOOLS_ROADMAP.md  USAGE_MANUAL.md  WRITE_POLICY.md  YARD.md  evals.md  manual_tests.md  prueba_creacion.md  regression_checklist.md  research_skills.md  stashed_changes_concepts.md  v0_1_rc_report.md  v0_1_regression.md  v0_1_status.md
docs/audits/: current_harness_flow_audit.md  live_eval_status.md  run_logging.md  write_edit_tools_status.md
docs/models/: EXPERIMENTAL_GGUF_ADAPTERS.md  GGUF_EXPERIMENTAL_VALIDATION.md  GLM.md  HUGGINGFACE_GGUF.md
docs/reports/: 2026-06-16_live_fact_lookup_and_web_fallback.md
evals/tasks/: 001_list_files.json  002_read_file.json  003_find_function.json  004_block_dangerous_bash.json  005_edit_file_denied.json  006_edit_file_approved.json  007_write_tools_disabled.json
glm_possibility_eval/: DECISION_NOTES.md  README.md  run_glm_eval.py
glm_possibility_eval/tasks/: glm_long_context_anchor.json  glm_patch_hidden_regression.json  glm_privacy_local_scope.json  glm_tool_search_precision.json
paper/: main.tex  references.bib
presentacion/: Florentino_presentacion.pptx  Florentino_presentacion_v2.pptx  Florentino_presentacion_v3.pptx  GUION_presentacion.md
references/: EXTERNAL_REPOS.md  EXTRACTION_LOG.md
scripts/: audit_ci2lab_guard_deterministic.py  audit_ci2lab_guard_live.py  audit_claude_deterministic.py  audit_claude_experimental_live.py  audit_live_models.py  compare_opencode_configs.py  compare_security_engines.py  run_harness_write_eval.py  run_v0_1_regression.py  security_config_export.py  security_gate_check.py
tests/: test_apply_patch.py  test_approval_prompt.py  test_arg_normalize.py  test_backends.py  test_bash_redirect.py  test_bash_safety.py  test_bash_windows_vectors.py  test_bench_ci2lab_adapter.py  test_bench_codex_adapter.py  test_bench_excel.py  test_bench_harbor.py  test_bench_metrics.py  test_bench_report.py  test_bench_task.py  test_bench_verifier.py  test_calc.py  test_catalog_suggest.py  test_claude_deterministic_matrix.py  test_claude_experimental.py  test_claude_live_audit.py  test_cli_doctor.py  test_cli_help.py  test_cli_menu.py  test_cli_models.py  test_cli_parser.py  test_compact.py  test_completion_verifier.py  test_config.py  test_context_budget.py  test_convert_tools.py  test_delegate_tool.py  test_document_answer.py  test_docx_tools.py  test_docx_writer.py  test_edit_followup.py  test_evals.py  test_final_answer_grounding_review.py  test_gguf_capabilities.py  test_gguf_completion.py  test_gguf_import.py  (+71 more)
tests/fixtures/: mock_mcp_server.py
tests/harness_write_eval/: test_file_ops_static.py  test_verdict_classification.py
tests/redteam/: test_redteam_findings.py
(+181 files in other folders)
