[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ci2lab"
version = "0.1.0"
description = "Agente local multi-modelo: hardware profiling, router de modelos y arnés agéntico"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "psutil>=5.9",
    "pypdf>=4.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
ci2lab = "ci2lab.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["ci2lab"]

[tool.hatch.build.targets.wheel.force-include]
"ci2lab/harness/prompts" = "ci2lab/harness/prompts"
"ci2lab/catalog/models.json" = "ci2lab/catalog/models.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
